--- a/Python_Data_type_and_structure.ipynb
+++ b/Python_Data_type_and_structure.ipynb
@@ -690,6 +690,571 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 11.  Write a code to create a tuple with the elements 100, 200, 300 and print it?\n",
+        "tuple1 = (100, 200, 300)\n",
+        "print(tuple1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LUwu2zdwoC_m",
+        "outputId": "07b7a109-13d1-43bb-f3e0-7c2ed88e0754"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(100, 200, 300)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 12.  Write a code to access the second-to-last element of the tuple ('red', 'green', 'blue', 'yellow').\n",
+        "\n",
+        "tuple2 = ('red', 'green', 'blue', 'yellow')\n",
+        "tuple2[-2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "bOTbZ9OXoDT0",
+        "outputId": "c0c5eccd-e072-4ef4-c833-f71590e1f51e"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'blue'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 13.  Write a code to find the minimum number in the tuple (10, 20, 5, 15).\n",
+        "tuplenew = (10, 20, 5, 15)\n",
+        "min(tuplenew)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iRqKONGXoDWp",
+        "outputId": "c60d932c-fbe8-407d-8d0c-0fbb8c2da5c9"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#14.  Write a code to find the index of the element \"cat\" in the tuple ('dog', 'cat', 'rabbit')\n",
+        "tuple_animal = ('dog  ', 'cat', 'rabbit')\n",
+        "tuple_animal.index('cat')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MskcrWzjoDZD",
+        "outputId": "9b979320-f788-4f00-b83f-8aa64587e8b1"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 15. Write a code to create a tuple containing three different fruits and check if \"kiwi\" is in it.\n",
+        "fruits = ('orange', 'banana', 'kiwi')\n",
+        "'kiwi' in fruits"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TvVFn21foDeG",
+        "outputId": "6d61d487-96ce-4fe3-b724-1b9b6beb4ef1"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 16. Write a code to create a set with the elements 'a', 'b', 'c' and print it.\n",
+        "set1 = {'a', 'b', 'c'}\n",
+        "print(set1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "92NwjSK9p3DK",
+        "outputId": "ec9f9b48-b50f-4fcf-e7bd-e36d5c473abd"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'b', 'c', 'a'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 17.  Write a code to clear all elements from the set {1, 2, 3, 4, 5}.\n",
+        "int_set = {1, 2, 3, 4, 5}\n",
+        "int_set.clear()\n",
+        "print(int_set)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5AhzzRk8p3If",
+        "outputId": "e58af48c-1dbc-4154-f31e-0072f7099c58"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "set()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 18. Write a code to remove the element 4 from the set {1, 2, 3, 4}.\n",
+        "set4 = {1, 2, 3, 4}\n",
+        "set4.remove(4)\n",
+        "print(set4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cTP8KxP4p3L_",
+        "outputId": "3c28a18a-8c47-49a2-8444-7ec87fb623b1"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 19. Write a code to find the union of two sets {1, 2, 3} and {3, 4, 5}.\n",
+        "setA = {1, 2, 3}\n",
+        "setB = {3, 4, 5}\n",
+        "setA|setB # this is also the way of find the union.\n",
+        "setA.union(setB)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_uXhwwvJp4Ml",
+        "outputId": "5239ae08-62f7-4775-f2da-d61e31ffd8a3"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 5}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 20. Write a code to find the union of two sets {1, 2, 3} and {3, 4, 5}.\n",
+        "s1 = {1, 2, 3}\n",
+        "s2 = {3, 4, 5}\n",
+        "s1&s2 # this is also the way of find the intersection.\n",
+        "s1.intersection(s2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1b3ykcUar9RS",
+        "outputId": "5e273114-af97-488a-9fab-954d01a233bc"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{3}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 21. Write a code to create a dictionary with the keys \"name\", \"age\", and \"city\", and print it.\n",
+        "dict_new = {\"name\": \"Anil\", \"Age\": 20, \"City\": \"Bhopal\"}\n",
+        "print(dict_new)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rdg3Qufdr9Tp",
+        "outputId": "ed3fe12c-b10a-47ab-e4d4-ca8cf07feb2e"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'Anil', 'Age': 20, 'City': 'Bhopal'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 22. Write a code to add a new key-value pair \"country\": \"USA\" to the dictionary {'name': 'John', 'age': 25}.\n",
+        "dict_profile = {'name': 'John', 'age':25}\n",
+        "dict_profile['country'] = 'USA'\n",
+        "print(dict_profile)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z31oJ9Ekr9Vu",
+        "outputId": "38645771-b4c1-437a-d072-718d0df98f58"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'John', 'age': 25, 'country': 'USA'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 23. Write a code to access the value associated with the key \"name\" in the dictionary {'name': 'Alice', 'age': 30}.\n",
+        "dict_name1 = {'name': 'Alice', 'age': 30}\n",
+        "dict_name1['name']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "yBXLPBgir9Xo",
+        "outputId": "43c87faa-5726-4484-cf57-a4e10e712c47"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Alice'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 24. Write a code to remove the key \"age\" from the dictionary {'name': 'Bob', 'age': 22, 'city': 'New York'}.\n",
+        "dict3 = {'name':'Bob', 'age': 22, 'city': 'New york'}\n",
+        "del dict3['age']\n",
+        "print(dict3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1P-nh5kYoDhe",
+        "outputId": "a542c3df-2da6-4d55-ddad-f5d188f6de29"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'Bob', 'city': 'New york'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 25. Write a code to check if the key \"city\" exists in the dictionary {'name': 'Alice', 'city': 'Paris'}.\n",
+        "dict4 = {'name': 'Alice', 'city':'Paris'}\n",
+        "'city' in dict4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FsAhcYDzoD7v",
+        "outputId": "82d22ae7-364b-49b2-9d00-a53a491593c4"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 26. Write a code to create a list, a tuple, and a dictionary, and print them all.\n",
+        "my_list = [1, 2, 'anil', 2.5]\n",
+        "my_tuple = ('Location', 'Bhopal', 10, 20)\n",
+        "my_dict = {\"name\": \"Anil\", \"sub\": \"DS\", \"City\": \"Bhopal\"}\n",
+        "\n",
+        "print(\"list\", my_list)\n",
+        "print(\"tuple\", my_tuple)\n",
+        "print(\"dictionary\", my_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V9Q0LftGoD_S",
+        "outputId": "94b850c3-84e7-4462-d443-a37c77cca8e4"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "list [1, 2, 'anil', 2.5]\n",
+            "tuple ('Location', 'Bhopal', 10, 20)\n",
+            "dictionary {'name': 'Anil', 'sub': 'DS', 'City': 'Bhopal'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\" 27. Write a code to create a list of 5 random numbers between 1 and 100, sort it in ascending order, and print the\n",
+        "result.(replaced)?\"\"\"\n",
+        "import random # functions generate the random number in Python.\n",
+        "random_list = []\n",
+        "for i in range (1, 6):\n",
+        "  random_list.append(random.randint(1, 100))\n",
+        "random_list.sort() # sorted in ascending order.\n",
+        "print(random_list) # every run time the result will be changes."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RaeJPfAw1cxW",
+        "outputId": "4ea19c7f-2afe-431a-a3be-3f84e7df50b4"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[8, 35, 56, 86, 93]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 28.  Write a code to create a list with strings and print the element at the third index?\n",
+        "list1 = [\"anil\", \"fruits\", \"lily\", \"python\", \"language\"]\n",
+        "print(\"element at index 3:\", list1[3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1s_sjQtl1dEC",
+        "outputId": "ac541b09-0b97-4c6c-98ed-93d5bfede4fe"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "element at index 3: python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 29.  Write a code to combine two dictionaries into one and print the result.\n",
+        "\n",
+        "# first method\n",
+        "dict1 = {\"name\": \"Anil\", \"sub\": \"DS\"}\n",
+        "dict2 = {\"City\": \"Bhopal\", \"Country\": \"India\"}\n",
+        "dict1 | dict2\n",
+        "\n",
+        "# second methhod\n",
+        "dict1.update(dict2)\n",
+        "print(dict1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qa0-pfuu1eD_",
+        "outputId": "ba264e83-4e6a-4beb-c381-26376a1ab0df"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'Anil', 'sub': 'DS', 'City': 'Bhopal', 'Country': 'India'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 30.  Write a code to convert a list of strings into a set.\n",
+        "try: # this code i have written because ('set' is not callable) raises the error. to debug the error we did that.\n",
+        "    del set\n",
+        "except NameError:\n",
+        "        pass\n",
+        "fruits = [\"apple\", \"banana\", \"cherry\", \"apple\", \"orange\", \"banana\"]\n",
+        "fruits = set(fruits)\n",
+        "print(fruits)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4BT_k5HiHfXd",
+        "outputId": "ccba857d-75fd-44c9-bd05-5a2fcb0c1a2b"
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'orange', 'apple', 'cherry', 'banana'}\n"
+          ]
+        }
+      ]
     }
   ]
 }
